@@ -7,6 +7,8 @@ version 0.57
 	  Nathan Walp)
 	* Danish translation added (Thanks, Sarauw Hansen)
 	* Finnish translation update (Thanks, Tero Kuusela)
+	* Jabber improvements (Thanks, Nathan Walp)
+	* More keyboard shortcuts
 
 version 0.56 (04/11/2002):
 	* German translation update (Thanks Karsten Weiss)
